# traffic_accident_detector

./: CMakeLists.txt
src/: main.cpp  multiTracker.cpp  urlcap.cpp
src/detect/: ObjectDetector.cpp  ObjectDetector.hpp  ObjectTracker.hpp
